crates/veil-codegen/tests/snapshots/snapshot_tests__ladder_l0.snap
---
source: crates/veil-codegen/tests/snapshot_tests.rs
assertion_line: 48
expression: out
---
// ===== Cargo.toml =====
[workspace]
members = [
    "crates/veil_shared",
    "crates/veil_bin",
    "crates/greet"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
serde_json = "1"

// ===== crates/veil_shared/Cargo.toml =====
[package]
name = "veil_shared"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio = { workspace = true }
futures = "0.3"

// ===== crates/veil_shared/src/register_handlers.rs =====
//! CAP-003: generated Bus handler registry.
//! Host calls `register_all` once to wire names → dispatch.

/// All Bus message types exported by this workspace.
pub const HANDLER_NAMES: &[&str] = &[
    "CreateGreeting",
    "ListGreetings",
    "run_saga",
    "unwind",
];

/// Register every generated handler name with a host-supplied registrar.
///
/// The host provides the actual dispatch (ports / platform). This module
/// only owns the name list so trampoline code never hardcodes it.
pub fn register_all<F>(mut register: F)
where
F: FnMut(&'static str),
{
for name in HANDLER_NAMES {
register(name);
}
}

/// Number of handlers in this workspace.
pub fn handler_count() -> usize {
HANDLER_NAMES.len()
}

// ===== crates/veil_shared/src/lib.rs =====
//! Shared types across all context crates — common errors and
//! layer-provided infrastructure traits (routing ports, etc.).

#![allow(unused_imports)]

pub mod register_handlers;
pub use register_handlers::{handler_count, register_all, HANDLER_NAMES};

use async_trait::async_trait;
use uuid::Uuid;

/// Domain error type.
#[derive(Debug, thiserror::Error)]
pub enum DomainError {
    #[error("Not found")]
    NotFound,
    #[error("Validation failed: {0}")]
    Validation(String),
    #[error("External service error: {0}")]
    External(String),
}

/// Validation error type.
#[derive(Debug, thiserror::Error)]
#[error("Validation error: {0}")]
pub struct ValidationError(pub String);

impl From<ValidationError> for DomainError {
    fn from(e: ValidationError) -> Self {
        DomainError::Validation(e.0)
    }
}

impl From<serde_json::Error> for DomainError {
    fn from(e: serde_json::Error) -> Self {
        DomainError::External(e.to_string())
    }
}

impl From<String> for DomainError {
    fn from(e: String) -> Self {
        DomainError::External(e)
    }
}

/// trait: EntityRepo
#[async_trait]
pub trait EntityRepo<T>: Send + Sync
where
    T: Send + Sync + 'static {
    async fn find(&self, id: Uuid) -> Result<Option<T>, DomainError>;
    async fn list_by_tenant(&self, tenant_id: Uuid) -> Result<Vec<T>, DomainError>;
    async fn save(&self, entity: T) -> Result<(), DomainError>;
    async fn delete(&self, id: Uuid) -> Result<(), DomainError>;
}

/// trait: AuthService
#[async_trait]
pub trait AuthService: Send + Sync {
    async fn validate_token(&self, token: String) -> Result<Principal, DomainError>;
    async fn check_permission(&self, principal: Principal, permission: String) -> Result<bool, DomainError>;
}

/// trait: SagaStep
#[async_trait]
pub trait SagaStep: Send + Sync {
    async fn action(&self, state: serde_json::Value) -> Result<serde_json::Value, DomainError>;
    async fn compensate(&self, state: serde_json::Value) -> Result<(), DomainError>;
}

/// trait: HttpHost
#[async_trait]
pub trait HttpHost: Send + Sync {
    async fn mount_ide(&self) -> Result<(), DomainError>;
    async fn serve_dir(&self, path: String) -> Result<(), DomainError>;
    async fn mount_bus(&self) -> Result<(), DomainError>;
    async fn listen(&self, port: i64) -> Result<(), DomainError>;
}

/// trait: FileSystem
#[async_trait]
pub trait FileSystem: Send + Sync {
    async fn read(&self, path: String) -> Result<String, DomainError>;
    async fn write(&self, path: String, content: String) -> Result<(), DomainError>;
    async fn list(&self, prefix: String) -> Result<Vec<String>, DomainError>;
}

/// trait: GitRepo
#[async_trait]
pub trait GitRepo: Send + Sync {
    async fn branches(&self, repo: String) -> Result<Vec<String>, DomainError>;
    async fn log(&self, repo: String, limit: i64) -> Result<Vec<String>, DomainError>;
}

/// Layer-provided struct: Principal
#[derive(Debug, Clone, serde::Serialize, serde::Deserialize)]
pub struct Principal {
    pub id: String,
    pub roles: Vec<String>,
    pub claims: std::collections::HashMap<String, String>,
}

/// Layer-declared coordinator.
pub async fn unwind(steps: &[Box<dyn SagaStep + Send + Sync>], upto: i64, state: serde_json::Value) -> Result<(), DomainError> {
    let mut i = upto;
    while i > 0 {
        i -= 1;
        steps.get(i as usize).ok_or(DomainError::NotFound)?.compensate(state.clone()).await?;
    }
    Ok(())
}

/// Layer-declared coordinator.
pub async fn run_saga(steps: &[Box<dyn SagaStep + Send + Sync>]) -> Result<(), DomainError> {
    let mut state = serde_json::json!({});
    let mut i = 0;
    while i < steps.len() as i64 {
        match steps.get(i as usize).ok_or(DomainError::NotFound)?.action(state.clone()).await {
                Ok(next) => {
                    state = next.clone();
                    i += 1
                },
                Err(e) => {
                    unwind(steps, i, state.clone()).await?;
                    return Err(e)
                },
            }
    }
    Ok(())
}


// ===== crates/greet/Cargo.toml =====
[package]
name = "greet"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
serde_json.workspace = true
veil_shared = { path = "../veil_shared" }

// ===== crates/greet/src/lib.rs =====
//! Greet — Context.

pub mod domain;
pub mod ports;
pub mod adapters;
pub mod application;

// ===== crates/greet/src/domain/types.rs =====
//! Domain types.

#![allow(unused_imports)]

use serde::{Deserialize, Serialize};
use uuid::Uuid;
use chrono::{DateTime, Utc};
use std::collections::HashMap;
use crate::ports::*;
use crate::domain::messages::*;

/// Aggregate: Greeting
#[derive(Debug, Clone, PartialEq, Serialize, Deserialize)]
pub struct Greeting {
    pub id: Uuid,
    pub message: String,
}

impl Greeting {
    pub fn new(id: Uuid, message: String) -> Self {
        Self { id, message }
    }
}


// ===== crates/greet/src/domain/messages.rs =====
//! Nested message types (grouped by parent construct).

#![allow(unused_imports)]

use serde::{Deserialize, Serialize};
use uuid::Uuid;
use chrono::{DateTime, Utc};

use super::types::*;

// No nested message types defined in this module.

// ===== crates/greet/src/domain/mod.rs =====
pub mod types;
pub mod messages;

// ===== crates/greet/src/ports/mod.rs =====
//! Trait definitions (async traits).

#![allow(unused_imports)]

use async_trait::async_trait;
use uuid::Uuid;

use crate::domain::types::*;
pub use veil_shared::{DomainError, ValidationError};
pub use veil_shared::*;

/// Port: GreetingRepo
#[async_trait::async_trait]
pub trait GreetingRepo: Send + Sync {
    async fn list_all(&self) -> Result<Vec<Greeting>, DomainError>;
    async fn save(&self, greeting: Greeting) -> Result<(), DomainError>;
}


// ===== crates/greet/src/adapters/mod.rs =====
//! Implementations of traits.

#![allow(unused_imports, unused_variables)]

use async_trait::async_trait;
use crate::ports::*;
use crate::domain::types::*;
use std::collections::HashMap;
use uuid::Uuid;
use chrono::Utc;

/// impl: MemGreetingRepo (implements GreetingRepo)
pub struct MemGreetingRepo {
}

#[async_trait]
impl GreetingRepo for MemGreetingRepo {
    async fn list_all(&self) -> Result<Vec<Greeting>, __VEIL_NO_ERROR_MODEL__> {
        return Ok(vec![])
    }

    async fn save(&self, greeting: Greeting) -> Result<(), __VEIL_NO_ERROR_MODEL__> {
        return Ok(())
    }

}


// ===== crates/greet/src/application/mod.rs =====
//! Application services and flow functions.

#![allow(unused_imports, unused_variables)]

use crate::ports::*;
use crate::domain::types::*;
use crate::domain::messages::*;
use std::sync::Arc;
use std::collections::HashMap;
use uuid::Uuid;
use chrono::{DateTime, Utc};

/// Declared dependency bundle (`deps GreetDeps`).
pub struct GreetDeps {
    pub greeting_repo: std::sync::Arc<dyn GreetingRepo + Send + Sync>,
}

pub type Deps = GreetDeps;

/// DomainService: ListGreetings
#[tracing::instrument(skip_all)]
pub async fn list_greetings(
    deps: &Deps, 
) -> Result<Vec<Greeting>, DomainError> {
    // step: query
    let items = deps.greeting_repo.list_all().await?;
    return Ok(items);

}

/// DomainService: CreateGreeting
#[tracing::instrument(skip_all)]
pub async fn create_greeting(
    deps: &Deps, message: String
) -> Result<Greeting, DomainError> {
    // step: persist
    let g = Greeting::new(Uuid::new_v4(), message);
    deps.greeting_repo.save(g.clone()).await?;
    return Ok(g);

}


// ===== crates/greet/manifest.json =====
{
  "context": "Greet",
  "crate": "greet",
  "deps": {
    "auth_service": {
      "provided_by": "runtime",
      "strategy": "bus",
      "trait": "AuthService"
    },
    "entity_repo": {
      "provided_by": "runtime",
      "trait": "EntityRepo"
    },
    "file_system": {
      "provided_by": "runtime",
      "trait": "FileSystem"
    },
    "git_repo": {
      "provided_by": "runtime",
      "trait": "GitRepo"
    },
    "greeting_repo": {
      "adapter": "MemGreetingRepo",
      "trait": "GreetingRepo"
    },
    "http_host": {
      "provided_by": "runtime",
      "trait": "HttpHost"
    },
    "saga_step": {
      "provided_by": "runtime",
      "trait": "SagaStep"
    }
  },
  "expose": [],
  "handlers": {
    "CreateGreeting": {
      "function": "create_greeting",
      "inputs": [
        {
          "name": "message",
          "type": "Named(\"Str\")"
        },
        {
          "name": "greeting_repo",
          "type": "Named(\"GreetingRepo\")"
        }
      ]
    },
    "ListGreetings": {
      "function": "list_greetings",
      "inputs": [
        {
          "name": "greeting_repo",
          "type": "Named(\"GreetingRepo\")"
        }
      ]
    }
  }
}

// ===== crates/veil_bin/Cargo.toml =====
[package]
name = "veil_bin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "veil_bin"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
veil_shared = { path = "../veil_shared" }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
greet = { path = "../greet" }

// ===== crates/veil_bin/src/main.rs =====
//! HTTP harness for package `LadderL0` (RT-001 / RT-003).
//! Wires adapters + exposes services as REST endpoints.
//! `cargo run -p veil_bin` from the generated workspace root.

#![allow(unused_imports)]

use std::sync::Arc;
use axum::{Router, Json, extract::State, routing::{get}, http::{HeaderMap, StatusCode}, middleware::{from_fn, Next}, response::Response, extract::Request};
use tower_http::cors::{{Any, CorsLayer}};
use uuid::Uuid;
use serde_json::Value;
use veil_shared::*;
use greet::application::{self as greet_app, GreetDeps as greet_Deps};

#[tokio::main]
async fn main() -> Result<(), Box<dyn std::error::Error>> {
    let port: u16 = std::env::var("PORT").ok().and_then(|s| s.parse().ok()).unwrap_or(3000);

    // ── context Greet ──
    let mem_greeting_repo_inst: Arc<dyn greet::ports::GreetingRepo + Send + Sync> = Arc::new(greet::adapters::MemGreetingRepo{});
    let greet_deps = Arc::new(greet_Deps {
        greeting_repo: mem_greeting_repo_inst.clone(),
    });

    let greet_router = Router::new()
        .route("/api/greetings", get(greet_list_greetings_handler).post(greet_create_greeting_handler))
        .layer(from_fn(veil_api_key_middleware))
        .layer(veil_cors_layer())
        .with_state(greet_deps.clone());

    let app = greet_router
        .route("/health", get(|| async { "ok" }));
    println!("veil_bin: profile=axum_http endpoints=2");
    println!("veil_bin: listening on :{}", port);
    let listener = tokio::net::TcpListener::bind(format!("0.0.0.0:{}", port)).await?;
    axum::serve(listener, app.into_make_service()).await?;
    Ok(())
}

async fn greet_list_greetings_handler(
    State(deps): State<Arc<greet_Deps>>,
) -> Result<Json<Value>, StatusCode> {
    match greet_app::list_greetings(&deps).await {
        Ok(result) => Ok(Json(veil_json_public(&result))),
        Err(e) => Err(veil_domain_error_status(e)),
    }
}

async fn greet_create_greeting_handler(
    State(deps): State<Arc<greet_Deps>>,
    Json(body): Json<Value>,
) -> Result<Json<Value>, StatusCode> {
    let message = body.get("message").and_then(|v| v.as_str()).unwrap_or_default().to_string();
    match greet_app::create_greeting(&deps, message).await {
        Ok(result) => Ok(Json(veil_json_public(&result))),
        Err(e) => Err(veil_domain_error_status(e)),
    }
}


/// Serialize for HTTP JSON, omitting fields annotated role:secret.
/// Persistence (repos) uses full `Serialize` — secrets still round-trip to storage.
pub fn veil_json_public<T: serde::Serialize>(value: &T) -> serde_json::Value {
    let mut v = serde_json::to_value(value).unwrap_or_default();
    veil_redact_secrets(&mut v);
    v
}

pub fn veil_redact_secrets(v: &mut serde_json::Value) {
    // Scalar secret fields from role:secret annotations (INV-001).
    const SECRET_KEYS: &[&str] = &[];
    // Header maps/lists often carry API keys — redact values, keep names.
    const HEADER_CONTAINERS: &[&str] = &["headers"];
    match v {
        serde_json::Value::Object(map) => {
            for k in SECRET_KEYS {
                map.remove(*k);
            }
            for hk in HEADER_CONTAINERS {
                if let Some(headers) = map.get_mut(*hk) {
                    veil_redact_header_values(headers);
                }
            }
            for (_k, child) in map.iter_mut() {
                veil_redact_secrets(child);
            }
        }
        serde_json::Value::Array(items) => {
            for item in items.iter_mut() {
                veil_redact_secrets(item);
            }
        }
        _ => {}
    }
}

pub fn veil_redact_header_values(v: &mut serde_json::Value) {
    match v {
        serde_json::Value::Array(items) => {
            for item in items.iter_mut() {
                if let serde_json::Value::Object(h) = item {
                    if h.contains_key("value") {
                        h.insert("value".into(), serde_json::Value::String(String::new()));
                    }
                    if h.contains_key("Value") {
                        h.insert("Value".into(), serde_json::Value::String(String::new()));
                    }
                }
            }
        }
        serde_json::Value::Object(map) => {
            // Map-shaped headers: redact all values
            for (_k, val) in map.iter_mut() {
                *val = serde_json::Value::String(String::new());
            }
        }
        _ => {}
    }
}

pub fn veil_domain_error_status(e: DomainError) -> StatusCode {
    match &e {
        DomainError::NotFound => {
            eprintln!("warn: not found: {e}");
            StatusCode::NOT_FOUND
        }
        DomainError::Validation(msg) => {
            eprintln!("warn: validation: {msg}");
            StatusCode::BAD_REQUEST
        }
        DomainError::External(msg) => {
            eprintln!("error: upstream: {msg}");
            StatusCode::BAD_GATEWAY
        }
    }
}

/// Production-oriented auth:
/// - `/health` + OPTIONS always open
/// - `VEIL_DEV=1` → open (local dual-loop only)
/// - else require a key: `VEIL_API_KEY`
/// - Present key via `X-Api-Key` or `Authorization: Bearer <key>`
async fn veil_api_key_middleware(
    headers: HeaderMap,
    request: Request,
    next: Next,
) -> Result<Response, StatusCode> {
    if request.uri().path() == "/health" || request.method() == axum::http::Method::OPTIONS {
        return Ok(next.run(request).await);
    }
    let dev = std::env::var("VEIL_DEV").ok().as_deref() == Some("1");
    let require = std::env::var("VEIL_REQUIRE_AUTH").ok().as_deref() == Some("1");
    let admin_key = std::env::var("VEIL_API_KEY").ok().filter(|s| !s.is_empty());
    let presented = headers
        .get("x-api-key")
        .and_then(|v| v.to_str().ok())
        .map(|s| s.to_string())
        .or_else(|| {
            headers
                .get("authorization")
                .and_then(|v| v.to_str().ok())
                .and_then(|s| s.strip_prefix("Bearer ").map(|t| t.to_string()))
        });

    if dev && !require && admin_key.is_none() {
        return Ok(next.run(request).await);
    }

    let Some(presented) = presented else {
        eprintln!("error: missing X-Api-Key / Authorization Bearer");
        return Err(StatusCode::UNAUTHORIZED);
    };

    if admin_key.as_deref() != Some(presented.as_str()) {
        eprintln!("warn: unauthorized — key not recognized");
        return Err(StatusCode::UNAUTHORIZED);
    }

    Ok(next.run(request).await)
}

/// Restrict CORS: `CORS_ORIGINS=http://a,http://b` or localhost defaults (not *).
pub fn veil_cors_layer() -> CorsLayer {
    use axum::http::{HeaderValue, Method};
    if let Ok(raw) = std::env::var("CORS_ORIGINS") {
        let origins: Vec<HeaderValue> = raw
            .split(',')
            .filter_map(|s| s.trim().parse().ok())
            .collect();
        if !origins.is_empty() {
            return CorsLayer::new()
                .allow_origin(origins)
                .allow_methods([
                    Method::GET,
                    Method::POST,
                    Method::PUT,
                    Method::PATCH,
                    Method::DELETE,
                    Method::OPTIONS,
                ])
                .allow_headers(Any);
        }
    }
    let local = [
        "http://localhost:5173",
        "http://127.0.0.1:5173",
        "http://localhost:5174",
        "http://127.0.0.1:5174",
        "http://localhost:3000",
        "http://127.0.0.1:3000",
    ];
    let origins: Vec<HeaderValue> = local.iter().filter_map(|s| s.parse().ok()).collect();
    CorsLayer::new()
        .allow_origin(origins)
        .allow_methods([
            Method::GET,
            Method::POST,
            Method::PUT,
            Method::PATCH,
            Method::DELETE,
            Method::OPTIONS,
        ])
        .allow_headers(Any)
}

/// HTML `<input type="date">` and form empties → JSON values chrono/serde accept.
/// `""` → null; bare `YYYY-MM-DD` → `YYYY-MM-DDT00:00:00Z`.
pub fn veil_normalize_body_dt(v: Value) -> Value {
    match v {
        Value::String(s) if s.is_empty() => Value::Null,
        Value::String(s)
            if s.len() == 10
                && s.as_bytes().get(4) == Some(&b'-')
                && s.as_bytes().get(7) == Some(&b'-')
                && !s.contains('T') =>
        {
            Value::String(format!("{s}T00:00:00Z"))
        }
        other => other,
    }
}
